--- a/domains/sf.yaml
+++ b/domains/sf.yaml
@@ -1,7 +1,9 @@
-apiType: soda
-name: DataSF
-locale: San Francisco
 domain: data.sfgov.org
-dbPath: ./data/data.sfgov.org.db
-slackUrl: "https://hooks.slack.com/services/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"
-link: ""
+name: DataSF
+apiFamily: soda
+apiVersion: v1
+apiToken: ""
+apiDocs: "https://data.sfgov.org/developers"
+locale: San Francisco
+db: ./data/data.sfgov.org.db
+slackUrl: ""
