--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist=py35, pypy, flake8
-# py26, py27, py33, py34, 
+envlist=py35, flake8
+# py26, py27, py33, py34, pypy
 
 [testenv]
-commands=py.test --cov sauce {posargs}
+commands=py.test --cov wally {posargs}
 deps=
     pytest
     pytest-cov
